# agentfactory

./: .gitignore  .mcp.json  AGENT_FACTORY_I18N_IMPLEMENTATION.md  Implementation_Guide.md  Setup_Checklist.md  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json
apps/short-generator/: .env.example  README.md  main.py  pyproject.toml
apps/short-generator/scripts/: test_complete_pipeline.py  test_db_manager.py  test_frame_generation.py  test_r2_upload.py  test_shorts_api.py  test_timing_accuracy.py  test_video_composition.py
apps/short-generator/src/: __init__.py  celerybeat-schedule
apps/short-generator/src/short_generator/: __init__.py  main.py  main2.py
apps/short-generator/src/short_generator/core/: config.py
apps/short-generator/src/short_generator/database/: __init__.py  connection.py  db_manager.py  models.py
apps/short-generator/src/short_generator/models/: __init__.py
apps/short-generator/src/short_generator/routes/: __init__.py  daily_automation.py  shorts.py  status.py
apps/short-generator/src/short_generator/services/: __init__.py  audio_generator.py  automation_service.py  batch_processor.py  content_extractor.py  daily_automation.py  edge_tts_audio.py  ffmpeg_utils.py  frame_generator.py  google_tts_audio.py  markdown_parser.py  pipeline_orchestrator.py  r2_uploader.py  script_generator.py  storage.py  video_assembler.py  video_composer.py  video_generation_service.py  visual_generator.py
apps/short-generator/src/shorts_generator/: main.py
apps/short-generator/src/src/: __init__.py
apps/short-generator/tests/: __init__.py  test_audio_generator.py  test_complete_pipeline.py  test_config.py  test_content_extractor.py  test_db_manager.py  test_frame_generator.py  test_google_tts_audio.py  test_models.py  test_r2_uploader.py  test_script_generator.py  test_shorts_api.py  test_video_assembler.py  test_video_composer.py  test_visual_generator.py
apps/shorts-generator/: .dockerignore  .env.example  Dockerfile  PHASE1_README.md  README.md  START.md  alembic.ini  create_test_short.py  docker-compose.yml  project.json  pyproject.toml
apps/shorts-generator/scripts/: test_complete_pipeline.py  test_r2_upload.py  test_video_composition.py
apps/shorts-generator/src/shorts_generator/: main.py
apps/shorts-generator/tests/: test_audio_generator.py  test_complete_pipeline.py  test_content_extractor.py  test_db_manager.py  test_frame_generator.py  test_google_tts_audio.py  test_models.py  test_video_composer.py  test_visual_generator.py
evals/: README.md
(+741 files in other folders)
