[project]
name = "short-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "boto3>=1.42.74",
    "edge-tts>=7.2.8",
    "fastapi-cli>=0.0.16",
    "fastapi[standard]>=0.135.2",
    "static-ffmpeg",
    "google-cloud-texttospeech>=2.33.0",
    "google-genai>=1.68.0",
    "groq>=1.1.1",
    "markdown>=3.10.2",
    "mypy-boto3-s3>=1.42.67",
    "pillow>=12.1.1",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.fastapi]
entrypoint = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
